// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildAccountAndGroupsRelationship should build group and account relationship 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "zoom_account:N0oChUdLTrCZLfk9JXp3Hw",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "account_id": "N0oChUdLTrCZLfk9JXp3Hw",
            "account_number": 7011249145,
            "cluster": "us06",
            "cms_user_id": "",
            "created_at": "2021-10-27T00:00:49Z",
            "dept": "",
            "display_name": "JupiterOne Development",
            "email": "development@jupiterone.dev",
            "first_name": "JupiterOne",
            "group_ids": Array [
              "ppUAdwEBRFCdRE0mfLttog",
            ],
            "id": "H9Yx0-O8QUCXVIseYAsjaA",
            "im_group_ids": Array [],
            "jid": "h9yx0-o8qucxviseyasjaa@xmpp.zoom.us",
            "job_title": "",
            "language": "en-US",
            "last_login_time": "2023-02-09T16:15:45Z",
            "last_name": "Development",
            "location": "",
            "login_types": Array [
              100,
            ],
            "personal_meeting_url": "https://us06web.zoom.us/j/4440405982?pwd=c0Jidml0ZS9ZRzA3dEZWSTNHNHlPZz09",
            "phone_country": "",
            "phone_number": "",
            "pmi": 4440405982,
            "role_id": "0",
            "role_name": "Owner",
            "status": "active",
            "timezone": "America/New_York",
            "type": 2,
            "use_pmi": false,
            "user_created_at": "2021-10-27T00:00:49Z",
            "verified": 1,
          },
        },
      ],
      "_type": "zoom_account",
      "accountId": "N0oChUdLTrCZLfk9JXp3Hw",
      "active": true,
      "createdOn": undefined,
      "displayName": "7011249145",
      "id": "H9Yx0-O8QUCXVIseYAsjaA",
      "name": "7011249145",
      "status": "active",
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zoom_group:ppUAdwEBRFCdRE0mfLttog",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "directory_privacy": 2,
            "id": "ppUAdwEBRFCdRE0mfLttog",
            "in_directory": false,
            "name": "Test Group",
            "total_members": 2,
          },
        },
      ],
      "_type": "zoom_group",
      "createdOn": undefined,
      "directoryPrivacy": 2,
      "displayName": "Test Group",
      "id": "ppUAdwEBRFCdRE0mfLttog",
      "name": "Test Group",
      "totalMembers": 2,
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zoom_group:dSHPJbpfQo6uS1a0_iznyg",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "directory_privacy": 2,
            "id": "dSHPJbpfQo6uS1a0_iznyg",
            "in_directory": false,
            "name": "Test Group 2",
            "total_members": 0,
          },
        },
      ],
      "_type": "zoom_group",
      "createdOn": undefined,
      "directoryPrivacy": 2,
      "displayName": "Test Group 2",
      "id": "dSHPJbpfQo6uS1a0_iznyg",
      "name": "Test Group 2",
      "totalMembers": 0,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zoom_account:N0oChUdLTrCZLfk9JXp3Hw",
      "_key": "zoom_account:N0oChUdLTrCZLfk9JXp3Hw|has|zoom_group:ppUAdwEBRFCdRE0mfLttog",
      "_toEntityKey": "zoom_group:ppUAdwEBRFCdRE0mfLttog",
      "_type": "zoom_account_has_group",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zoom_account:N0oChUdLTrCZLfk9JXp3Hw",
      "_key": "zoom_account:N0oChUdLTrCZLfk9JXp3Hw|has|zoom_group:dSHPJbpfQo6uS1a0_iznyg",
      "_toEntityKey": "zoom_group:dSHPJbpfQo6uS1a0_iznyg",
      "_type": "zoom_account_has_group",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zoom_account",
    "zoom_group",
    "zoom_account_has_group",
  ],
  "numCollectedEntities": 3,
}
`;

exports[`#buildUserAndGroupsRelationship should build group and user relationship 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zoom_user:a18JbG_DQketjPo0Y8wYqg",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-28T03:49:40Z",
            "dept": "Test",
            "display_name": "J1 Test",
            "email": "tj2488801@gmail.com",
            "first_name": "J1",
            "group_ids": Array [
              "ppUAdwEBRFCdRE0mfLttog",
            ],
            "id": "a18JbG_DQketjPo0Y8wYqg",
            "language": "en-US",
            "last_login_time": "2021-10-28T03:52:40Z",
            "last_name": "Test",
            "phone_number": "",
            "pic_url": "https://lh3.googleusercontent.com/a/AATXAJy4ZWS6WyBZvx4Ujm476PKw65aih3KL0KVnJBTS=s96-c",
            "pmi": 0,
            "role_id": "2",
            "status": "active",
            "timezone": "",
            "type": 1,
            "user_created_at": "2021-10-24T06:16:56Z",
            "verified": 1,
          },
        },
      ],
      "_type": "zoom_user",
      "active": true,
      "audioConferencingTollFreeAndFeeBasedTollCallAllowWebinarAttendeesDial": undefined,
      "audioConferencingTollFreeAndFeeBasedTollCallEnable": false,
      "createdAt": "2021-10-28T03:49:40Z",
      "createdOn": undefined,
      "dept": "Test",
      "displayName": "J1 Test",
      "email": "tj2488801@gmail.com",
      "emailNotificationAlternativeHostReminder": undefined,
      "emailNotificationCancelMeetingReminder": true,
      "emailNotificationCloudRecordingAvailableReminder": undefined,
      "emailNotificationJbhReminder": true,
      "emailNotificationScheduleForReminder": undefined,
      "featureCnMeeting": false,
      "featureConcurrentMeeting": undefined,
      "featureInMeeting": false,
      "featureLargeMeeting": false,
      "featureLargeMeetingCapacity": undefined,
      "featureMeetingCapacity": 100,
      "featureWebinar": false,
      "featureWebinarCapacity": undefined,
      "featureZoomEvents": false,
      "featureZoomEventsCapacity": undefined,
      "featureZoomPhone": false,
      "firstName": "J1",
      "groupIds": Array [
        "ppUAdwEBRFCdRE0mfLttog",
      ],
      "hostKey": undefined,
      "id": "a18JbG_DQketjPo0Y8wYqg",
      "inMeetingAllowLiveStreaming": false,
      "inMeetingAllowParticipantsChatWith": 4,
      "inMeetingAllowParticipantsToRename": true,
      "inMeetingAllowUsersSaveChats": 3,
      "inMeetingAnnotation": true,
      "inMeetingAttendeeOnHold": false,
      "inMeetingAutoSavingChat": false,
      "inMeetingBreakoutRoom": false,
      "inMeetingBreakoutRoomSchedule": undefined,
      "inMeetingChat": true,
      "inMeetingClosedCaption": false,
      "inMeetingCoHost": false,
      "inMeetingCustomDataCenterRegions": false,
      "inMeetingCustomLiveStreamingService": undefined,
      "inMeetingCustomServiceInstructions": undefined,
      "inMeetingDataCenterRegions": undefined,
      "inMeetingE2eEncryption": false,
      "inMeetingEntryExitChime": "none",
      "inMeetingFarEndCameraControl": false,
      "inMeetingFeedbacl": true,
      "inMeetingFileTransfer": false,
      "inMeetingGroupHd": false,
      "inMeetingJoinFromDesktop": undefined,
      "inMeetingJoinFromMobile": undefined,
      "inMeetingLiveStreamingFacebook": undefined,
      "inMeetingLiveStreamingYoutube": undefined,
      "inMeetingMeetingReactions": true,
      "inMeetingNonVerbalFeedback": false,
      "inMeetingPolling": undefined,
      "inMeetingPrivateChat": true,
      "inMeetingRecordPlayVoice": false,
      "inMeetingRemoteControl": true,
      "inMeetingRemoteSupport": false,
      "inMeetingRequestPermissionToUnmute": undefined,
      "inMeetingRequestPermissionToUnmuteParticipants": false,
      "inMeetingScreenSharing": true,
      "inMeetingShareDualCamera": undefined,
      "inMeetingShowAJoinFromYourBrowserLink": false,
      "inMeetingShowMeetingControlToolbar": false,
      "inMeetingVirtualBackground": true,
      "inMeetingVirtualBackgroundSettingsAllowUploadCustom": true,
      "inMeetingVirtualBackgroundSettingsAllowVideos": true,
      "inMeetingVirtualBackgroundSettingsEnable": true,
      "inMeetingWaitingRoom": false,
      "inMeetingWebinarChatAllowAttendeesChatWith": undefined,
      "inMeetingWebinarChatAllowAutoSaveLocalChatFile": undefined,
      "inMeetingWebinarChatAllowPanelistsChatWith": undefined,
      "inMeetingWebinarChatAllowPanelistsSendDirectMessage": undefined,
      "inMeetingWebinarChatAllowUsersSaveChats": undefined,
      "inMeetingWebinarChatDefaultAttendeesChatWith": undefined,
      "inMeetingWebinarChatEnable": undefined,
      "inMeetingWebinarLiveStreamingCustomServiceInstructions": undefined,
      "inMeetingWebinarLiveStreamingEnable": undefined,
      "inMeetingWebinarLiveStreamingLiveStreamingReminder": undefined,
      "inMeetingWebinarLiveStreamingLiveStreamingService": undefined,
      "inMeetingWhoCanShareScreen": "host",
      "inMeetingWhoCanShareScreenWhenSomeoneIsSharing": "host",
      "inMeetingWorkplaceByFacebook": undefined,
      "language": "en-US",
      "lastClientVersion": undefined,
      "lastLoginTime": "2021-10-28T03:52:40Z",
      "lastName": "Test",
      "meetingAuthentication": false,
      "meetingSecurityApprovedOrDeniedCountriesOrRegionsEnable": false,
      "meetingSecurityAutoSecurity": true,
      "meetingSecurityBlockUserDomain": false,
      "meetingSecurityBlockUserDomainList": undefined,
      "meetingSecurityEmbedPasswordInJoinLink": true,
      "meetingSecurityEncryptionType": undefined,
      "meetingSecurityEndToEndEncryptedMeetings": undefined,
      "meetingSecurityMeetingPassword": true,
      "meetingSecurityMeetingPasswordRequirementConsecutiveCharactersLength": 0,
      "meetingSecurityMeetingPasswordRequirementHaveLetter": false,
      "meetingSecurityMeetingPasswordRequirementHaveNumber": false,
      "meetingSecurityMeetingPasswordRequirementHaveSpecialCharacter": false,
      "meetingSecurityMeetingPasswordRequirementHaveUpperAndLowerCharacters": false,
      "meetingSecurityMeetingPasswordRequirementLength": 0,
      "meetingSecurityMeetingPasswordRequirementOnlyAllowNumeric": false,
      "meetingSecurityMeetingPasswordRequirementWeakEnhanceDetection": false,
      "meetingSecurityPasswordForPmi": undefined,
      "meetingSecurityPhonePassword": true,
      "meetingSecurityPmiPassword": true,
      "meetingSecurityRequirePasswordForScheduledMeeting": false,
      "meetingSecurityRequirePasswordForScheduledWebinar": undefined,
      "meetingSecurityWaitingRoom": false,
      "meetingSecurityWaitingRoomSettingsParticipantsToPlaceInWaitingRoom": 0,
      "meetingSecurityWaitingRoomSettingsUsersWhoCanAdmitParticipantsFromWaitingRoom": undefined,
      "meetingSecurityWaitingRoomSettingsWhitelistedDomainsForWaitingRoom": undefined,
      "meetingSecurityWebinarPassword": undefined,
      "name": "J1 Test",
      "phoneNumber": "",
      "picUrl": "https://lh3.googleusercontent.com/a/AATXAJy4ZWS6WyBZvx4Ujm476PKw65aih3KL0KVnJBTS=s96-c",
      "pmi": 0,
      "profileRecordingStorageLocationAllowedValues": Array [
        "US",
        "AU",
        "CA",
        "DE",
        "SG",
        "BR",
        "JP",
        "CH",
      ],
      "profileRecordingStorageLocationValue": "US",
      "recordingAskHostToConfirmDisclaimer": undefined,
      "recordingAskParticipantsToConsentDisclaimer": undefined,
      "recordingAuthentication": false,
      "recordingAutoDeleteCmr": false,
      "recordingAutoDeleteCmrData": undefined,
      "recordingAutoRecording": "none",
      "recordingCloudRecording": undefined,
      "recordingHostDeleteCloudRecording": undefined,
      "recordingHostPauseStopRecording": undefined,
      "recordingIpAddressAccessControlEnable": false,
      "recordingIpAddressAccessControlIpAddressesOrRanges": undefined,
      "recordingLocalRecording": true,
      "recordingRecordAudioFile": undefined,
      "recordingRecordGalleryView": undefined,
      "recordingRecordSpeakerView": undefined,
      "recordingRecordingAudioTranscript": undefined,
      "recordingRecordingDisclaimer": false,
      "recordingRecordingPasswordRequirementHaveLetter": true,
      "recordingRecordingPasswordRequirementHaveNumber": true,
      "recordingRecordingPasswordRequirementHaveSpecialCharacter": true,
      "recordingRecordingPasswordRequirementLength": 8,
      "recordingRecordingPasswordRequirementOnlyAllowNumeric": false,
      "recordingRequirePasswordForSharedCloudRecordings": undefined,
      "recordingSaveChatText": undefined,
      "recordingShowTimestamp": undefined,
      "roleId": "2",
      "scheduleMeetingAudioType": "both",
      "scheduleMeetingDefaultPasswordForScheduledMeetings": undefined,
      "scheduleMeetingEmbedPasswordInJoinLink": true,
      "scheduleMeetingForcePmiJbhPassword": true,
      "scheduleMeetingHostVideo": false,
      "scheduleMeetingJoinBeforeHost": false,
      "scheduleMeetingMeetingPasswordRequirementConsecutiveCharactersLength": 0,
      "scheduleMeetingMeetingPasswordRequirementHaveLetter": false,
      "scheduleMeetingMeetingPasswordRequirementHaveNumber": false,
      "scheduleMeetingMeetingPasswordRequirementHaveSpecialCharacter": false,
      "scheduleMeetingMeetingPasswordRequirementHaveUpperAndLowerCharacters": false,
      "scheduleMeetingMeetingPasswordRequirementLength": 0,
      "scheduleMeetingMeetingPasswordRequirementOnlyAllowNumeric": false,
      "scheduleMeetingMeetingPasswordRequirementWeakEnhanceDetection": false,
      "scheduleMeetingMuteUponEntry": false,
      "scheduleMeetingParticipantsVideo": false,
      "scheduleMeetingPersonalMeeting": true,
      "scheduleMeetingPmiPassword": undefined,
      "scheduleMeetingPstnPasswordProtected": true,
      "scheduleMeetingRequirePasswordForInstantMeetings": true,
      "scheduleMeetingRequirePasswordForPmiMeetings": "all",
      "scheduleMeetingRequirePasswordForScheduledmeetings": undefined,
      "scheduleMeetingRequirePasswordForSchedulingNewMeetings": true,
      "scheduleMeetingUsePmiForInstantMeetings": false,
      "scheduleMeetingUsePmiForScheduledMeetings": false,
      "status": "active",
      "telephonyAudioConferenceInfo": "",
      "telephonyShowInternationalNumbersLink": true,
      "telephonyTelephonyRegionsAllowedValues": Array [
        "CATB",
        "EUTB_FR",
        "EUTB_AM",
        "USTB",
        "AUTB",
        "ASTB",
        "EUTB",
      ],
      "telephonyTelephonyRegionsSelectionValue": "USTB",
      "telephonyThirdPartyAudio": false,
      "timezone": "",
      "tspCallOut": undefined,
      "tspCallOutCountries": undefined,
      "tspShowInternationalNumbersLink": undefined,
      "type": 1,
      "username": "tj2488801@gmail.com",
      "verified": 1,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zoom_user:H9Yx0-O8QUCXVIseYAsjaA",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-27T00:00:49Z",
            "display_name": "JupiterOne Development",
            "email": "development@jupiterone.dev",
            "first_name": "JupiterOne",
            "group_ids": Array [
              "ppUAdwEBRFCdRE0mfLttog",
            ],
            "id": "H9Yx0-O8QUCXVIseYAsjaA",
            "language": "en-US",
            "last_login_time": "2023-02-09T16:15:45Z",
            "last_name": "Development",
            "phone_number": "",
            "pmi": 4440405982,
            "role_id": "0",
            "status": "active",
            "timezone": "America/New_York",
            "type": 2,
            "user_created_at": "2021-10-27T00:00:49Z",
            "verified": 1,
          },
        },
      ],
      "_type": "zoom_user",
      "active": true,
      "audioConferencingTollFreeAndFeeBasedTollCallAllowWebinarAttendeesDial": undefined,
      "audioConferencingTollFreeAndFeeBasedTollCallEnable": false,
      "createdAt": "2021-10-27T00:00:49Z",
      "createdOn": undefined,
      "dept": undefined,
      "displayName": "JupiterOne Development",
      "email": "development@jupiterone.dev",
      "emailNotificationAlternativeHostReminder": true,
      "emailNotificationCancelMeetingReminder": true,
      "emailNotificationCloudRecordingAvailableReminder": true,
      "emailNotificationJbhReminder": true,
      "emailNotificationScheduleForReminder": true,
      "featureCnMeeting": false,
      "featureConcurrentMeeting": "None",
      "featureInMeeting": false,
      "featureLargeMeeting": false,
      "featureLargeMeetingCapacity": undefined,
      "featureMeetingCapacity": 100,
      "featureWebinar": false,
      "featureWebinarCapacity": undefined,
      "featureZoomEvents": false,
      "featureZoomEventsCapacity": undefined,
      "featureZoomPhone": false,
      "firstName": "JupiterOne",
      "groupIds": Array [
        "ppUAdwEBRFCdRE0mfLttog",
      ],
      "hostKey": undefined,
      "id": "H9Yx0-O8QUCXVIseYAsjaA",
      "inMeetingAllowLiveStreaming": false,
      "inMeetingAllowParticipantsChatWith": 4,
      "inMeetingAllowParticipantsToRename": true,
      "inMeetingAllowUsersSaveChats": 3,
      "inMeetingAnnotation": true,
      "inMeetingAttendeeOnHold": false,
      "inMeetingAutoSavingChat": false,
      "inMeetingBreakoutRoom": false,
      "inMeetingBreakoutRoomSchedule": undefined,
      "inMeetingChat": true,
      "inMeetingClosedCaption": false,
      "inMeetingCoHost": false,
      "inMeetingCustomDataCenterRegions": false,
      "inMeetingCustomLiveStreamingService": undefined,
      "inMeetingCustomServiceInstructions": undefined,
      "inMeetingDataCenterRegions": undefined,
      "inMeetingE2eEncryption": false,
      "inMeetingEntryExitChime": "none",
      "inMeetingFarEndCameraControl": false,
      "inMeetingFeedbacl": true,
      "inMeetingFileTransfer": false,
      "inMeetingGroupHd": false,
      "inMeetingJoinFromDesktop": undefined,
      "inMeetingJoinFromMobile": undefined,
      "inMeetingLiveStreamingFacebook": undefined,
      "inMeetingLiveStreamingYoutube": undefined,
      "inMeetingMeetingReactions": true,
      "inMeetingNonVerbalFeedback": false,
      "inMeetingPolling": false,
      "inMeetingPrivateChat": true,
      "inMeetingRecordPlayVoice": false,
      "inMeetingRemoteControl": true,
      "inMeetingRemoteSupport": false,
      "inMeetingRequestPermissionToUnmute": undefined,
      "inMeetingRequestPermissionToUnmuteParticipants": false,
      "inMeetingScreenSharing": true,
      "inMeetingShareDualCamera": undefined,
      "inMeetingShowAJoinFromYourBrowserLink": false,
      "inMeetingShowMeetingControlToolbar": false,
      "inMeetingVirtualBackground": true,
      "inMeetingVirtualBackgroundSettingsAllowUploadCustom": true,
      "inMeetingVirtualBackgroundSettingsAllowVideos": true,
      "inMeetingVirtualBackgroundSettingsEnable": true,
      "inMeetingWaitingRoom": false,
      "inMeetingWebinarChatAllowAttendeesChatWith": undefined,
      "inMeetingWebinarChatAllowAutoSaveLocalChatFile": undefined,
      "inMeetingWebinarChatAllowPanelistsChatWith": undefined,
      "inMeetingWebinarChatAllowPanelistsSendDirectMessage": undefined,
      "inMeetingWebinarChatAllowUsersSaveChats": undefined,
      "inMeetingWebinarChatDefaultAttendeesChatWith": undefined,
      "inMeetingWebinarChatEnable": undefined,
      "inMeetingWebinarLiveStreamingCustomServiceInstructions": undefined,
      "inMeetingWebinarLiveStreamingEnable": undefined,
      "inMeetingWebinarLiveStreamingLiveStreamingReminder": undefined,
      "inMeetingWebinarLiveStreamingLiveStreamingService": undefined,
      "inMeetingWhoCanShareScreen": "host",
      "inMeetingWhoCanShareScreenWhenSomeoneIsSharing": "host",
      "inMeetingWorkplaceByFacebook": undefined,
      "language": "en-US",
      "lastClientVersion": undefined,
      "lastLoginTime": "2023-02-09T16:15:45Z",
      "lastName": "Development",
      "meetingAuthentication": false,
      "meetingSecurityApprovedOrDeniedCountriesOrRegionsEnable": false,
      "meetingSecurityAutoSecurity": true,
      "meetingSecurityBlockUserDomain": false,
      "meetingSecurityBlockUserDomainList": undefined,
      "meetingSecurityEmbedPasswordInJoinLink": true,
      "meetingSecurityEncryptionType": undefined,
      "meetingSecurityEndToEndEncryptedMeetings": undefined,
      "meetingSecurityMeetingPassword": true,
      "meetingSecurityMeetingPasswordRequirementConsecutiveCharactersLength": 0,
      "meetingSecurityMeetingPasswordRequirementHaveLetter": false,
      "meetingSecurityMeetingPasswordRequirementHaveNumber": false,
      "meetingSecurityMeetingPasswordRequirementHaveSpecialCharacter": false,
      "meetingSecurityMeetingPasswordRequirementHaveUpperAndLowerCharacters": false,
      "meetingSecurityMeetingPasswordRequirementLength": 0,
      "meetingSecurityMeetingPasswordRequirementOnlyAllowNumeric": false,
      "meetingSecurityMeetingPasswordRequirementWeakEnhanceDetection": false,
      "meetingSecurityPasswordForPmi": "792824",
      "meetingSecurityPhonePassword": true,
      "meetingSecurityPmiPassword": true,
      "meetingSecurityRequirePasswordForScheduledMeeting": false,
      "meetingSecurityRequirePasswordForScheduledWebinar": undefined,
      "meetingSecurityWaitingRoom": false,
      "meetingSecurityWaitingRoomSettingsParticipantsToPlaceInWaitingRoom": 0,
      "meetingSecurityWaitingRoomSettingsUsersWhoCanAdmitParticipantsFromWaitingRoom": undefined,
      "meetingSecurityWaitingRoomSettingsWhitelistedDomainsForWaitingRoom": undefined,
      "meetingSecurityWebinarPassword": undefined,
      "name": "JupiterOne Development",
      "phoneNumber": "",
      "picUrl": undefined,
      "pmi": 4440405982,
      "profileRecordingStorageLocationAllowedValues": Array [
        "US",
        "AU",
        "CA",
        "DE",
        "SG",
        "BR",
        "JP",
        "CH",
      ],
      "profileRecordingStorageLocationValue": "US",
      "recordingAskHostToConfirmDisclaimer": undefined,
      "recordingAskParticipantsToConsentDisclaimer": undefined,
      "recordingAuthentication": false,
      "recordingAutoDeleteCmr": false,
      "recordingAutoDeleteCmrData": undefined,
      "recordingAutoRecording": "none",
      "recordingCloudRecording": true,
      "recordingHostDeleteCloudRecording": true,
      "recordingHostPauseStopRecording": undefined,
      "recordingIpAddressAccessControlEnable": false,
      "recordingIpAddressAccessControlIpAddressesOrRanges": undefined,
      "recordingLocalRecording": true,
      "recordingRecordAudioFile": true,
      "recordingRecordGalleryView": false,
      "recordingRecordSpeakerView": true,
      "recordingRecordingAudioTranscript": undefined,
      "recordingRecordingDisclaimer": false,
      "recordingRecordingPasswordRequirementHaveLetter": true,
      "recordingRecordingPasswordRequirementHaveNumber": true,
      "recordingRecordingPasswordRequirementHaveSpecialCharacter": true,
      "recordingRecordingPasswordRequirementLength": 8,
      "recordingRecordingPasswordRequirementOnlyAllowNumeric": false,
      "recordingRequirePasswordForSharedCloudRecordings": true,
      "recordingSaveChatText": true,
      "recordingShowTimestamp": false,
      "roleId": "0",
      "scheduleMeetingAudioType": "both",
      "scheduleMeetingDefaultPasswordForScheduledMeetings": undefined,
      "scheduleMeetingEmbedPasswordInJoinLink": true,
      "scheduleMeetingForcePmiJbhPassword": true,
      "scheduleMeetingHostVideo": false,
      "scheduleMeetingJoinBeforeHost": false,
      "scheduleMeetingMeetingPasswordRequirementConsecutiveCharactersLength": 0,
      "scheduleMeetingMeetingPasswordRequirementHaveLetter": false,
      "scheduleMeetingMeetingPasswordRequirementHaveNumber": false,
      "scheduleMeetingMeetingPasswordRequirementHaveSpecialCharacter": false,
      "scheduleMeetingMeetingPasswordRequirementHaveUpperAndLowerCharacters": false,
      "scheduleMeetingMeetingPasswordRequirementLength": 0,
      "scheduleMeetingMeetingPasswordRequirementOnlyAllowNumeric": false,
      "scheduleMeetingMeetingPasswordRequirementWeakEnhanceDetection": false,
      "scheduleMeetingMuteUponEntry": false,
      "scheduleMeetingParticipantsVideo": false,
      "scheduleMeetingPersonalMeeting": true,
      "scheduleMeetingPmiPassword": "792824",
      "scheduleMeetingPstnPasswordProtected": true,
      "scheduleMeetingRequirePasswordForInstantMeetings": true,
      "scheduleMeetingRequirePasswordForPmiMeetings": "all",
      "scheduleMeetingRequirePasswordForScheduledmeetings": undefined,
      "scheduleMeetingRequirePasswordForSchedulingNewMeetings": true,
      "scheduleMeetingUsePmiForInstantMeetings": false,
      "scheduleMeetingUsePmiForScheduledMeetings": false,
      "status": "active",
      "telephonyAudioConferenceInfo": "",
      "telephonyShowInternationalNumbersLink": true,
      "telephonyTelephonyRegionsAllowedValues": Array [
        "CATB",
        "EUTB_FR",
        "EUTB_AM",
        "USTB",
        "AUTB",
        "ASTB",
        "EUTB",
      ],
      "telephonyTelephonyRegionsSelectionValue": "USTB",
      "telephonyThirdPartyAudio": false,
      "timezone": "America/New_York",
      "tspCallOut": undefined,
      "tspCallOutCountries": undefined,
      "tspShowInternationalNumbersLink": undefined,
      "type": 2,
      "username": "development@jupiterone.dev",
      "verified": 1,
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zoom_group:ppUAdwEBRFCdRE0mfLttog",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "directory_privacy": 2,
            "id": "ppUAdwEBRFCdRE0mfLttog",
            "in_directory": false,
            "name": "Test Group",
            "total_members": 2,
          },
        },
      ],
      "_type": "zoom_group",
      "createdOn": undefined,
      "directoryPrivacy": 2,
      "displayName": "Test Group",
      "id": "ppUAdwEBRFCdRE0mfLttog",
      "name": "Test Group",
      "totalMembers": 2,
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zoom_group:dSHPJbpfQo6uS1a0_iznyg",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "directory_privacy": 2,
            "id": "dSHPJbpfQo6uS1a0_iznyg",
            "in_directory": false,
            "name": "Test Group 2",
            "total_members": 0,
          },
        },
      ],
      "_type": "zoom_group",
      "createdOn": undefined,
      "directoryPrivacy": 2,
      "displayName": "Test Group 2",
      "id": "dSHPJbpfQo6uS1a0_iznyg",
      "name": "Test Group 2",
      "totalMembers": 0,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zoom_group:ppUAdwEBRFCdRE0mfLttog",
      "_key": "zoom_group:ppUAdwEBRFCdRE0mfLttog|has|zoom_user:a18JbG_DQketjPo0Y8wYqg",
      "_toEntityKey": "zoom_user:a18JbG_DQketjPo0Y8wYqg",
      "_type": "zoom_group_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zoom_group:ppUAdwEBRFCdRE0mfLttog",
      "_key": "zoom_group:ppUAdwEBRFCdRE0mfLttog|has|zoom_user:H9Yx0-O8QUCXVIseYAsjaA",
      "_toEntityKey": "zoom_user:H9Yx0-O8QUCXVIseYAsjaA",
      "_type": "zoom_group_has_user",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zoom_user",
    "zoom_group",
    "zoom_group_has_user",
  ],
  "numCollectedEntities": 4,
}
`;

exports[`#fetchGroups should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zoom_group:ppUAdwEBRFCdRE0mfLttog",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "directory_privacy": 2,
            "id": "ppUAdwEBRFCdRE0mfLttog",
            "in_directory": false,
            "name": "Test Group",
            "total_members": 2,
          },
        },
      ],
      "_type": "zoom_group",
      "createdOn": undefined,
      "directoryPrivacy": 2,
      "displayName": "Test Group",
      "id": "ppUAdwEBRFCdRE0mfLttog",
      "name": "Test Group",
      "totalMembers": 2,
    },
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zoom_group:dSHPJbpfQo6uS1a0_iznyg",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "directory_privacy": 2,
            "id": "dSHPJbpfQo6uS1a0_iznyg",
            "in_directory": false,
            "name": "Test Group 2",
            "total_members": 0,
          },
        },
      ],
      "_type": "zoom_group",
      "createdOn": undefined,
      "directoryPrivacy": 2,
      "displayName": "Test Group 2",
      "id": "dSHPJbpfQo6uS1a0_iznyg",
      "name": "Test Group 2",
      "totalMembers": 0,
    },
  ],
  "encounteredTypes": Array [
    "zoom_group",
  ],
  "numCollectedEntities": 2,
}
`;
